--- a/src/components/HeaderCard/HeaderCard.css
+++ b/src/components/HeaderCard/HeaderCard.css
@@ -1,6 +1,5 @@
 
 .header-general{
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -9,15 +8,14 @@
 #header a{
     font-size: 24px;
     font-weight: 500;
+    transition: .4s;
     color: white;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 2rem;
     background-color: #6A62B7;
     padding: 1.1rem 2rem;
-    margin: 6rem;
+
 }
-
-
 .header-button {
-  margin: 5rem 6rem;
+  margin: 4rem 5rem;
 }
