--- a/src/pages/BookLooking/bookLooking.css
+++ b/src/pages/BookLooking/bookLooking.css
@@ -1,17 +1,18 @@
 .book-container{
 
-    width: 70%;
+    width: 60%;
     margin: 0 auto;
     height: 246px;
     border: 2px solid #888888;
-    border-radius: 16px;
+    border-radius: 32px;
     text-align: center;
     left: 290px;
     position: absolute;
-    top: 10px;
+    top: 60px;
     background: white;
 }
 .book-container-text h3{
+    color: black;
     font-size: 40px;
     font-weight: 700;
     line-height: 54px;
